--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",   
-    "test": "react-scripts test --env=jsdom --verbose",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom --verbose --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
